build/generated/Css/CSSParser.cpp

// Generated from /workspace/grammar/CSS.g4 by ANTLR 4.13.1


#include "CSSVisitor.h"

#include "CSSParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct CSSParserStaticData final {
  CSSParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  CSSParserStaticData(const CSSParserStaticData&) = delete;
  CSSParserStaticData(CSSParserStaticData&&) = delete;
  CSSParserStaticData& operator=(const CSSParserStaticData&) = delete;
  CSSParserStaticData& operator=(CSSParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag cssParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
CSSParserStaticData *cssParserStaticData = nullptr;

void cssParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (cssParserStaticData != nullptr) {
    return;
  }
#else
  assert(cssParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<CSSParserStaticData>(
    std::vector<std::string>{
      "stylesheet", "statement", "charsetRule", "importRule", "namespaceRule", 
      "media", "mediaQueryList", "mediaQuery", "mediaType", "mediaExpression", 
      "mediaFeature", "page", "pseudoPage", "fontFace", "keyframes", "keyframeRule", 
      "keyframeSelector", "supports", "supportsCondition", "supportsNegation", 
      "supportsConjunction", "supportsDisjunction", "supportsConditionInParens", 
      "supportsDeclarationCondition", "generalEnclosed", "ruleset", "selectorList", 
      "selector", "combinator", "simpleSelector", "typeSelector", "typeNamespacePrefix", 
      "elementName", "universal", "idSelector", "classSelector", "attributeSelector", 
      "attributeOperator", "pseudoClass", "functionalPseudoClass", "pseudoElement", 
      "declaration", "property", "value", "term", "function", "hexcolor", 
      "url", "operator", "important", "nestedStatement"
    },
    std::vector<std::string>{
      "", "'@charset'", "'@import'", "'@namespace'", "'@media'", "'@page'", 
      "'@font-face'", "", "'@supports'", "'only'", "'not'", "'and'", "'or'", 
      "'from'", "'to'", "'!important'", "'('", "')'", "'{'", "'}'", "'['", 
      "']'", "':'", "';'", "','", "'.'", "'#'", "'+'", "'-'", "'>'", "'~'", 
      "'*'", "'|'", "'/'", "'='", "'~='", "'|='", "'^='", "'$='", "'*='", 
      "", "", "", "", "", "", "", "", "'url'"
    },
    std::vector<std::string>{
      "", "CHARSET", "IMPORT", "NAMESPACE", "MEDIA", "PAGE", "FONT_FACE", 
      "KEYFRAMES", "SUPPORTS", "ONLY", "NOT", "AND", "OR", "FROM", "TO", 
      "IMPORTANT", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", 
      "COLON", "SEMICOLON", "COMMA", "DOT", "HASH", "PLUS", "MINUS", "GREATER", 
      "TILDE", "STAR", "PIPE", "SLASH", "EQUALS", "INCLUDES", "DASHMATCH", 
      "PREFIXMATCH", "SUFFIXMATCH", "SUBSTRINGMATCH", "LENGTH", "EMS", "EXS", 
      "ANGLE", "TIME", "FREQ", "PERCENTAGE", "FUNCTION", "URL", "NUMBER", 
      "STRING", "IDENT", "HEXDIGIT", "COMMENT", "SPACE", "ANY"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  cssParserStaticData = staticData.release();
}

}

CSSParser::CSSParser(TokenStream *input) : CSSParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

CSSParser::CSSParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  CSSParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *cssParserStaticData->atn, cssParserStaticData->decisionToDFA, cssParserStaticData->sharedContextCache, options);
}

CSSParser::~CSSParser() {
  delete _interpreter;
}

const atn::ATN& CSSParser::getATN() const {
  return *cssParserStaticData->atn;
}

std::string CSSParser::getGrammarFileName() const {
  return "CSS.g4";
}

const std::vector<std::string>& CSSParser::getRuleNames() const {
  return cssParserStaticData->ruleNames;
}

const dfa::Vocabulary& CSSParser::getVocabulary() const {
  return cssParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView CSSParser::getSerializedATN() const {
  return cssParserStaticData->serializedATN;
}


//----------------- StylesheetContext ------------------------------------------------------------------

CSSParser::StylesheetContext::StylesheetContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CSSParser::StylesheetContext::EOF() {
  return getToken(CSSParser::EOF, 0);
}

std::vector<CSSParser::StatementContext *> CSSParser::StylesheetContext::statement() {
  return getRuleContexts<CSSParser::StatementContext>();
}

CSSParser::StatementContext* CSSParser::StylesheetContext::statement(size_t i) {
  return getRuleContext<CSSParser::StatementContext>(i);
}


size_t CSSParser::StylesheetContext::getRuleIndex() const {
  return CSSParser::RuleStylesheet;
}


std::any CSSParser::StylesheetContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CSSVisitor*>(visitor))
    return parserVisitor->visitStylesheet(this);
  else
    return visitor->visitChildren(this);
}

CSSParser::StylesheetContext* CSSParser::stylesheet() {
  StylesheetContext *_localctx = _tracker.createInstance<StylesheetContext>(_ctx, getState());
  enterRule(_localctx, 0, CSSParser::RuleStylesheet);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(105);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 20266206641783294) != 0)) {
      setState(102);
      statement();
      setState(107);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(108);
    match(CSSParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

CSSParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CSSParser::RulesetContext* CSSParser::StatementContext::ruleset() {
  return getRuleContext<CSSParser::RulesetContext>(0);
}

CSSParser::MediaContext* CSSParser::StatementContext::media() {
  return getRuleContext<CSSParser::MediaContext>(0);
}

CSSParser::PageContext* CSSParser::StatementContext::page() {
  return getRuleContext<CSSParser::PageContext>(0);
}

CSSParser::FontFaceContext* CSSParser::StatementContext::fontFace() {
  return getRuleContext<CSSParser::FontFaceContext>(0);
}

CSSParser::KeyframesContext* CSSParser::StatementContext::keyframes() {
  return getRuleContext<CSSParser::KeyframesContext>(0);
}

CSSParser::SupportsContext* CSSParser::StatementContext::supports() {
  return getRuleContext<CSSParser::SupportsContext>(0);
}

CSSParser::ImportRuleContext* CSSParser::StatementContext::importRule() {
  return getRuleContext<CSSParser::ImportRuleContext>(0);
}

CSSParser::NamespaceRuleContext* CSSParser::StatementContext::namespaceRule() {
  return getRuleContext<CSSParser::NamespaceRuleContext>(0);
}

CSSParser::CharsetRuleContext* CSSParser::StatementContext::charsetRule() {
  return getRuleContext<CSSParser::CharsetRuleContext>(0);
}

CSSParser::NestedStatementContext* CSSParser::StatementContext::nestedStatement() {
  return getRuleContext<CSSParser::NestedStatementContext>(0);
}


size_t CSSParser::StatementContext::getRuleIndex() const {
  return CSSParser::RuleStatement;
}


std::any CSSParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CSSVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

CSSParser::StatementContext* CSSParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, CSSParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(120);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case CSSParser::LBRACE:
      case CSSParser::LBRACKET:
      case CSSParser::COLON:
      case CSSParser::COMMA:
      case CSSParser::DOT:
      case CSSParser::HASH:
      case CSSParser::PLUS:
      case CSSParser::GREATER:
      case CSSParser::TILDE:
      case CSSParser::STAR:
      case CSSParser::PIPE:
      case CSSParser::IDENT:
      case CSSParser::SPACE: {
        enterOuterAlt(_localctx, 1);
        setState(110);
        ruleset();
        break;
      }

      case CSSParser::MEDIA: {
        enterOuterAlt(_localctx, 2);
        setState(111);
        media();
        break;
      }

      case CSSParser::PAGE: {
        enterOuterAlt(_localctx, 3);
        setState(112);
        page();
        break;
      }

      case CSSParser::FONT_FACE: {
        enterOuterAlt(_localctx, 4);
        setState(113);
        fontFace();
        break;
      }

      case CSSParser::KEYFRAMES: {
        enterOuterAlt(_localctx, 5);
        setState(114);
        keyframes();
        break;
      }

      case CSSParser::SUPPORTS: {
        enterOuterAlt(_localctx, 6);
        setState(115);
        supports();
        break;
      }

      case CSSParser::IMPORT: {
        enterOuterAlt(_localctx, 7);
        setState(116);
        importRule();
        break;
      }

      case CSSParser::NAMESPACE: {
        enterOuterAlt(_localctx, 8);
        setState(117);
        namespaceRule();
        break;
      }

      case CSSParser::CHARSET: {
        enterOuterAlt(_localctx, 9);
        setState(118);
        charsetRule();
        break;
      }

      case CSSParser::SEMICOLON: {
        enterOuterAlt(_localctx, 10);
        setState(119);
        nestedStatement();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CharsetRuleContext ------------------------------------------------------------------

CSSParser::CharsetRuleContext::CharsetRuleContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CSSParser::CharsetRuleContext::CHARSET() {
  return getToken(CSSParser::CHARSET, 0);
}

tree::TerminalNode* CSSParser::CharsetRuleContext::STRING() {
  return getToken(CSSParser::STRING, 0);
}

tree::TerminalNode* CSSParser::CharsetRuleContext::SEMICOLON() {
  return getToken(CSSParser::SEMICOLON, 0);
}


size_t CSSParser::CharsetRuleContext::getRuleIndex() const {
  return CSSParser::RuleCharsetRule;
}


std::any CSSParser::CharsetRuleContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CSSVisitor*>(visitor))
    return parserVisitor->visitCharsetRule(this);
  else
    return visitor->visitChildren(this);
}

CSSParser::CharsetRuleContext* CSSParser::charsetRule() {
  CharsetRuleContext *_localctx = _tracker.createInstance<CharsetRuleContext>(_ctx, getState());
  enterRule(_localctx, 4, CSSParser::RuleCharsetRule);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(122);
    match(CSSParser::CHARSET);
    setState(123);
    match(CSSParser::STRING);
    setState(124);
    match(CSSParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ImportRuleContext ------------------------------------------------------------------

CSSParser::ImportRuleContext::ImportRuleContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CSSParser::ImportRuleContext::IMPORT() {
  return getToken(CSSParser::IMPORT, 0);
}

tree::TerminalNode* CSSParser::ImportRuleContext::SEMICOLON() {
  return getToken(CSSParser::SEMICOLON, 0);
}

tree::TerminalNode* CSSParser::ImportRuleContext::STRING() {
  return getToken(CSSParser::STRING, 0);
}

CSSParser::UrlContext* CSSParser::ImportRuleContext::url() {
  return getRuleContext<CSSParser::UrlContext>(0);
}

CSSParser::MediaQueryListContext* CSSParser::ImportRuleContext::mediaQueryList() {
  return getRuleContext<CSSParser::MediaQueryListContext>(0);
}


size_t CSSParser::ImportRuleContext::getRuleIndex() const {
  return CSSParser::RuleImportRule;
}


std::any CSSParser::ImportRuleContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CSSVisitor*>(visitor))
    return parserVisitor->visitImportRule(this);
  else
    return visitor->visitChildren(this);
}

CSSParser::ImportRuleContext* CSSParser::importRule() {
  ImportRuleContext *_localctx = _tracker.createInstance<ImportRuleContext>(_ctx, getState());
  enterRule(_localctx, 6, CSSParser::RuleImportRule);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(126);
    match(CSSParser::IMPORT);
    setState(129);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case CSSParser::STRING: {
        setState(127);
        match(CSSParser::STRING);
        break;
      }

      case CSSParser::URL: {
        setState(128);
        url();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    setState(132);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 2251799813752320) != 0)) {
      setState(131);
      mediaQueryList();
    }
    setState(134);
    match(CSSParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- NamespaceRuleContext ------------------------------------------------------------------

CSSParser::NamespaceRuleContext::NamespaceRuleContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CSSParser::NamespaceRuleContext::NAMESPACE() {
  return getToken(CSSParser::NAMESPACE, 0);
}

tree::TerminalNode* CSSParser::NamespaceRuleContext::SEMICOLON() {
  return getToken(CSSParser::SEMICOLON, 0);
}

tree::TerminalNode* CSSParser::NamespaceRuleContext::STRING() {
  return getToken(CSSParser::STRING, 0);
}

CSSParser::UrlContext* CSSParser::NamespaceRuleContext::url() {
  return getRuleContext<CSSParser::UrlContext>(0);
}

tree::TerminalNode* CSSParser::NamespaceRuleContext::IDENT() {
  return getToken(CSSParser::IDENT, 0);
}


size_t CSSParser::NamespaceRuleContext::getRuleIndex() const {
  return CSSParser::RuleNamespaceRule;
}


std::any CSSParser::NamespaceRuleContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CSSVisitor*>(visitor))
    return parserVisitor->visitNamespaceRule(this);
  else
    return visitor->visitChildren(this);
}

CSSParser::NamespaceRuleContext* CSSParser::namespaceRule() {
  NamespaceRuleContext *_localctx = _tracker.createInstance<NamespaceRuleContext>(_ctx, getState());
  enterRule(_localctx, 8, CSSParser::RuleNamespaceRule);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(136);
    match(CSSParser::NAMESPACE);
    setState(138);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == CSSParser::IDENT) {
      setState(137);
      match(CSSParser::IDENT);
    }
    setState(142);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case CSSParser::STRING: {
        setState(140);
        match(CSSParser::STRING);
        break;
      }

      case CSSParser::URL: {
        setState(141);
        url();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    setState(144);
    match(CSSParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MediaContext ------------------------------------------------------------------

CSSParser::MediaContext::MediaContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CSSParser::MediaContext::MEDIA() {
  return getToken(CSSParser::MEDIA, 0);
}

CSSParser::MediaQueryListContext* CSSParser::MediaContext::mediaQueryList() {
  return getRuleContext<CSSParser::MediaQueryListContext>(0);
}

tree::TerminalNode* CSSParser::MediaContext::LBRACE() {
  return getToken(CSSParser::LBRACE, 0);
}

tree::TerminalNode* CSSParser::MediaContext::RBRACE() {
  return getToken(CSSParser::RBRACE, 0);
}

std::vector<CSSParser::RulesetContext *> CSSParser::MediaContext::ruleset() {
  return getRuleContexts<CSSParser::RulesetContext>();
}

CSSParser::RulesetContext* CSSParser::MediaContext::ruleset(size_t i) {
  return getRuleContext<CSSParser::RulesetContext>(i);
}


size_t CSSParser::MediaContext::getRuleIndex() const {
  return CSSParser::RuleMedia;
}


std::any CSSParser::MediaContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CSSVisitor*>(visitor))
    return parserVisitor->visitMedia(this);
  else
    return visitor->visitChildren(this);
}

CSSParser::MediaContext* CSSParser::media() {
  MediaContext *_localctx = _tracker.createInstance<MediaContext>(_ctx, getState());
  enterRule(_localctx, 10, CSSParser::RuleMedia);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(146);
    match(CSSParser::MEDIA);
    setState(147);
    mediaQueryList();
    setState(148);
    match(CSSParser::LBRACE);
    setState(152);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 20266206633394176) != 0)) {
      setState(149);
      ruleset();
      setState(154);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(155);
    match(CSSParser::RBRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MediaQueryListContext ------------------------------------------------------------------

CSSParser::MediaQueryListContext::MediaQueryListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<CSSParser::MediaQueryContext *> CSSParser::MediaQueryListContext::mediaQuery() {
  return getRuleContexts<CSSParser::MediaQueryContext>();
}

CSSParser::MediaQueryContext* CSSParser::MediaQueryListContext::mediaQuery(size_t i) {
  return getRuleContext<CSSParser::MediaQueryContext>(i);
}

std::vector<tree::TerminalNode *> CSSParser::MediaQueryListContext::COMMA() {
  return getTokens(CSSParser::COMMA);
}

tree::TerminalNode* CSSParser::MediaQueryListContext::COMMA(size_t i) {
  return getToken(CSSParser::COMMA, i);
}


size_t CSSParser::MediaQueryListContext::getRuleIndex() const {
  return CSSParser::RuleMediaQueryList;
}


std::any CSSParser::MediaQueryListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CSSVisitor*>(visitor))
    return parserVisitor->visitMediaQueryList(this);
  else
    return visitor->visitChildren(this);
}

CSSParser::MediaQueryListContext* CSSParser::mediaQueryList() {
  MediaQueryListContext *_localctx = _tracker.createInstance<MediaQueryListContext>(_ctx, getState());
  enterRule(_localctx, 12, CSSParser::RuleMediaQueryList);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(157);
    mediaQuery();
    setState(162);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == CSSParser::COMMA) {
      setState(158);
      match(CSSParser::COMMA);
      setState(159);
      mediaQuery();
      setState(164);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MediaQueryContext ------------------------------------------------------------------

CSSParser::MediaQueryContext::MediaQueryContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CSSParser::MediaTypeContext* CSSParser::MediaQueryContext::mediaType() {
  return getRuleContext<CSSParser::MediaTypeContext>(0);
}

std::vector<tree::TerminalNode *> CSSParser::MediaQueryContext::AND() {
  return getTokens(CSSParser::AND);
}

tree::TerminalNode* CSSParser::MediaQueryContext::AND(size_t i) {
  return getToken(CSSParser::AND, i);
}

std::vector<CSSParser::MediaExpressionContext *> CSSParser::MediaQueryContext::mediaExpression() {
  return getRuleContexts<CSSParser::MediaExpressionContext>();
}

CSSParser::MediaExpressionContext* CSSParser::MediaQueryContext::mediaExpression(size_t i) {
  return getRuleContext<CSSParser::MediaExpressionContext>(i);
}

tree::TerminalNode* CSSParser::MediaQueryContext::ONLY() {
  return getToken(CSSParser::ONLY, 0);
}

tree::TerminalNode* CSSParser::MediaQueryContext::NOT() {
  return getToken(CSSParser::NOT, 0);
}


size_t CSSParser::MediaQueryContext::getRuleIndex() const {
  return CSSParser::RuleMediaQuery;
}


std::any CSSParser::MediaQueryContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CSSVisitor*>(visitor))
    return parserVisitor->visitMediaQuery(this);
  else
    return visitor->visitChildren(this);
}

CSSParser::MediaQueryContext* CSSParser::mediaQuery() {
  MediaQueryContext *_localctx = _tracker.createInstance<MediaQueryContext>(_ctx, getState());
  enterRule(_localctx, 14, CSSParser::RuleMediaQuery);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(184);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case CSSParser::ONLY:
      case CSSParser::NOT:
      case CSSParser::IDENT: {
        enterOuterAlt(_localctx, 1);
        setState(166);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == CSSParser::ONLY

        || _la == CSSParser::NOT) {
          setState(165);
          _la = _input->LA(1);
          if (!(_la == CSSParser::ONLY

          || _la == CSSParser::NOT)) {
          _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
        }
        setState(168);
        mediaType();
        setState(173);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == CSSParser::AND) {
          setState(169);
          match(CSSParser::AND);
          setState(170);
          mediaExpression();
          setState(175);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        break;
      }

      case CSSParser::LPAREN: {
        enterOuterAlt(_localctx, 2);
        setState(176);
        mediaExpression();
        setState(181);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == CSSParser::AND) {
          setState(177);
          match(CSSParser::AND);
          setState(178);
          mediaExpression();
          setState(183);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MediaTypeContext ------------------------------------------------------------------
